metadata/force-app/main/default/objects/NPS_User_Survey__c/NPS_User_Survey__c.object-meta.xml
<CustomObject>
    <description>NPS survey results requested from end-users via WalkMe

The Net Promoter Score (NPS) is an index that indicates the willingness of customers to recommend the company&apos;s products/services to others. It provides an overview of the customer&apos;s overall satisfaction.</description>
    <label>NPS User Survey via Bynder Wizard</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Survey Result ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPS User Surveys via Bynder Wizard</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>