metadata/force-app/main/default/objects/NPS_User_Survey__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>NPS_User_Surveys</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>