metadata/force-app/main/default/objects/NPS_User_Survey__c/fields/Survey_Name__c.field-meta.xml
<CustomField>
    <fullName>Survey_Name__c</fullName>
    <formula>&quot;NPS Survey&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Name</label>
    <type>Text</type>
</CustomField>