metadata/force-app/main/default/objects/NPS_User_Survey__c/fields/Type_of_User__c.field-meta.xml
<CustomField>
    <fullName>Type_of_User__c</fullName>
    <label>Type of User</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heavy</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Custom1</fullName>
            </value>
            <value>
                <fullName>Custom2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>