metadata/force-app/main/default/objects/NPS_User_Survey__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <description>anonymous bynder user ID</description>
    <label>User ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>